examples/negative/effects_phase2/partial_handle_kaikai_default.kai
# Issue #557 (Stage B): per-op coverage walker rejects a partial handle
# even when the effect's `default { }` block declares the omitted op,
# if the default clause body is a kaikai expression (not an
# `$extern_handler(...)` bridge). Stage A's codegen lowers only the
# extern-handler shape; a kaikai-bodied default clause is parsed and
# stored but has no emit path until Stage C. Typer-side acceptance
# would type-check clean and segfault at runtime — the diagnostic
# explains exactly which Stage closes the gap.

effect MyLog {
  info(msg: String) : Unit
  warn(msg: String) : Unit
  default {
    info(msg, resume) -> resume(())
    warn(msg, resume) -> resume(())
  }
}

fn main() : Int = {
  handle {
    MyLog.warn("oops")
    42
  } with MyLog {
    info(msg, resume) -> resume(())
  }
}
